# mini_mac

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
src/market/: mod.rs  sync_market.rs
src/network/: connect_wifi.rs  geo.rs  http.rs  mod.rs
src/time/: mod.rs  sync_time.rs
src/weather/: icons.rs  mod.rs  sync_weather.rs
