[package]
edition      = "2024"
name         = "mini_mac"
rust-version = "1.88"
version      = "0.1.0"

resolver = "2"

[[bin]]
name = "mini_mac"
path = "./src/bin/main.rs"

[dependencies]
anyhow = "1.0"
embedded-svc = "0.28.1"
esp-idf-svc = { version = "0.51.0", default-features = false, features = ["binstart", "native", "std"] }
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
log = "0.4"
tinybmp = "0.7.0"
serde = "1.0.228"
serde_json = "1.0.150"

[build-dependencies]
embuild = "0.33"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
